# rtfm

./: .editorconfig  .gitignore  Cargo.toml  README.md  build-linux.sh  justfile  rtfm.example.toml  rustfmt.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: search_bench.rs
docs/: DEVELOPER_GUIDE.md  RUST_BEGINNER_GUIDE.md  SPEC.md  book.toml
docs/src/: SUMMARY.md  api.md  architecture.md  backup.md  changelog.md  cli.md  configuration.md  contributing.md  faq.md  installation.md  introduction.md  learn.md  quickstart.md  rust-guide.md  search.md  tui.md
src/: config.rs  main.rs
src/api/: data.rs  learn.rs  mod.rs  search.rs  update.rs
src/cli/: mod.rs
src/learn/: mod.rs
src/search/: mod.rs
src/storage/: mod.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/update/: mod.rs
tests/: integration_test.rs
