[package]
name = "rtfm-dammit"
version = "0.1.0"
edition = "2021"
description = "Read The F***ing Manual - Offline CLI cheatsheet"
authors = ["ubizhang@hotmail.com"]
license = "GPL-3.0-or-later"
repository = "https://github.com/F2077/rtfm"
keywords = ["cli", "cheatsheet", "tldr", "manual", "help", "offline"]
categories = ["command-line-utilities"]

[[bin]]
name = "rtfm"
path = "src/main.rs"

[dependencies]
# TUI 框架
ratatui = "0.29"
crossterm = "0.28"

# CLI 框架
clap = { version = "4.5", features = ["derive"] }

# Web 框架 (可选 HTTP 服务模式)
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# 全文检索
tantivy = "0.22"
jieba-rs = "0.7"
unicode-width = "0.1"

# 数据存储
redb = "2.1"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP 客户端 (rustls for cross-compilation, no OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Markdown 解析
pulldown-cmark = "0.10"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 工具
thiserror = "1"
anyhow = "1"
once_cell = "1"
tempfile = "3"
flate2 = "1"
tar = "0.4"
zip = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
parking_lot = "0.12"

# 配置
toml = "0.8"

# OpenAPI 文档
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_bench"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
